Bug 13531 - hostfs cannot seek files bigger than 2GB
Summary: hostfs cannot seek files bigger than 2GB
Status: RESOLVED CODE_FIX
Alias: None
Product: Platform Specific/Hardware
Classification: Unclassified
Component: UML (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Jeff Dike
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-14 03:59 UTC by Wolfgang Illmeyer
Modified: 2009-07-18 10:00 UTC (History)
2 users (show)

See Also:
Kernel Version: 2.6.29.1
Subsystem:
Regression: No
Bisected commit-id:


Attachments
enable lfs for hostfs (428 bytes, patch)
2009-06-14 03:59 UTC, Wolfgang Illmeyer
Details | Diff

Description Wolfgang Illmeyer 2009-06-14 03:59:00 UTC
Created attachment 21906 [details]
enable lfs for hostfs

LFS doesn't work for hostfs, patch attached
Comment 1 Andrew Morton 2009-06-22 22:06:27 UTC
Probably it would be better to use MAX_LFS_FILESIZE rather than plain "-1".

Please submit patches via email, not bugzilla?  Suitable recipients for this patch are

Andrew Morton <akpm@linux-foundation.org>
Jeff Dike <jdike@addtoit.com>
linux-kernel@vger.kernel.org

Documentation/SubmittingPatches has some tips, including the Signed-off-by: procedure.
Comment 2 Wolfgang Illmeyer 2009-07-18 10:00:28 UTC
works for me as of 2.6.31-rc2

Note You need to log in before you can comment on or make changes to this bug.